--- a/style.css
+++ b/style.css
@@ -256,6 +256,8 @@ img {
 
 .mySlides img {
   width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .slideshow-container {
@@ -643,6 +645,12 @@ img {
   margin-top: 100px;
 }
 
+.banner img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 .banner p {
   font-size: 30px;
   font-weight: 400;
@@ -741,7 +749,10 @@ footer>div:first-child{
   margin: 0;
   padding-top: 100px;
 }
-
+.footer-logo-icon img{
+  width: 36px;
+  height: 36px;
+}
 .footer-logo>div:first-child>a>img {
   margin-bottom: 30px;
 }
@@ -888,9 +899,6 @@ footer>div:first-child{
   .banner > div {
     width: 30%;
     margin: 0;
-  }
-  .banner img {
-    width: 100%;
   }
   .shop-instagram-products {
     justify-content: center;
